<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="Let's Get Started!"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_up_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_title"
        android:gravity="center"
        android:textSize="20dp"
        android:text="Create an account to get all features"
        android:textAllCaps="false" />


    <EditText
        android:id="@+id/sign_up_name_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_up_subtitle"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/name_logo"
        android:drawablePadding="5dp"
        android:ellipsize="none"
        android:hint="@string/name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColor="#0084ff"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/sign_up_username_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_up_name_et"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/user_name_logo"
        android:drawablePadding="5dp"
        android:ellipsize="none"
        android:hint="@string/user_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColor="#0084ff"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/sign_up_phone_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_up_username_et"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/phone_logo"
        android:drawablePadding="5dp"
        android:ellipsize="none"
        android:hint="Phone Number"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColor="#0084ff"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/sign_up_email_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_up_phone_et"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/email_logo"
        android:drawablePadding="5dp"
        android:ellipsize="none"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColor="#0084ff"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/sign_up_age_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_up_email_tv"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/age_logo"
        android:drawablePadding="5dp"
        android:ellipsize="none"
        android:hint="Age"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColor="#0084ff"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/sign_up_password_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sign_up_age_et"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/password_logo"
        android:drawablePadding="5dp"
        android:ellipsize="none"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColor="#0084ff"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/sign_up_to_sq_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/sign_up_password_et"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/btn_bg"
        android:text="Next"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:id="@+id/sign_up_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_to_sq_btn"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:gravity="left">

        <TextView
            android:id="@+id/log_in_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="Already have an account?" />

        <TextView
            android:id="@+id/log_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/log_in_reminder"
            android:gravity="center"
            android:text="Log in"
            android:textSize="20dp"
            android:textColor="#0038d1" />
    </RelativeLayout>


</RelativeLayout>